--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
           transition-duration: 0.25s;
 }
 header .nav__container .navigation__mobile .navigation-mobile__box .navigation-mobile__item:hover {
-  background-color: #cc0001;
+  background-color: #cc9f9f8a;
   color: #cc0001;
 }
 header .nav__container .navigation__mobile .navigation-mobile__box .navigation-mobile__item::-moz-selection {
@@ -973,135 +973,6 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 @media (max-width: 599px) {
   .container .carousel .carousel__card .crysis .text {
     margin: 0 0 8px;
-  }
-}
-
-.rent__section {
-  padding: 100px 16px 16px;
-}
-.rent__section h2 {
-  color: #4b4a4a;
-  font-family: Golos;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 27px;
-  margin-bottom: 24px;
-}
-@media (max-width: 599px) {
-  .rent__section h2 {
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-  }
-}
-.rent__section .rent__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-.rent__section .rent__box .rent__link {
-  text-decoration: none;
-  width: 20%;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .rent__section .rent__box .rent__link {
-    width: 33%;
-  }
-}
-@media (max-width: 599px) {
-  .rent__section .rent__box .rent__link {
-    width: 49%;
-  }
-}
-.rent__section .rent__box .rent__link .rent__item {
-  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  border-radius: 5px;
-  height: 150px;
-  margin: 16px;
-  padding: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .rent__section .rent__box .rent__link .rent__item {
-    margin: 8px;
-  }
-}
-@media (max-width: 599px) {
-  .rent__section .rent__box .rent__link .rent__item {
-    padding: 16px 8px 8px;
-  }
-}
-.rent__section .rent__box .rent__link .rent__item:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-}
-.rent__section .rent__box .rent__link .rent__item i {
-  font-size: 54px;
-  color: #880a77;
-  margin-bottom: 8px;
-  margin: 16px 0 8px;
-}
-.rent__section .rent__box .rent__link .rent__item .fa-telegram {
-  color: #3390ec;
-}
-.rent__section .rent__box .rent__link .rent__item .fa-facebook-square {
-  color: #0674e7;
-}
-.rent__section .rent__box .rent__link .rent__item .rent__logo {
-  width: 52%;
-  margin: 12px;
-}
-.rent__section .rent__box .rent__link .rent__item .rent__title {
-  font-family: Golos;
-  font-size: 14px;
-  font-weight: 500;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-  text-align: center;
-}
-@media (max-width: 599px) {
-  .rent__section .rent__box .rent__link .rent__item .rent__title {
-    margin-bottom: 8px;
-  }
-}
-.rent__section .rent__box .rent__link .rent__item .rent__text {
-  font-family: Golos;
-  font-size: 12px;
-  font-weight: 400;
-  color: #4b4a4a;
-  text-align: center;
-}
-@media (max-width: 599px) {
-  .rent__section .rent__box .rent__link .rent__item .rent__text {
-    font-size: 12px;
-    margin-bottom: 8px;
   }
 }
 
@@ -1607,711 +1478,6 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section .about__item .about__title i {
   margin-right: 8px;
-}
-
-.legalisation__section {
-  padding: 100px 16px 16px;
-}
-.legalisation__section h1 {
-  color: #4b4a4a;
-  font-family: Raleway;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 27px;
-  text-align: center;
-  margin-bottom: 16px;
-}
-.legalisation__section h2 {
-  color: #4b4a4a;
-  font-family: Raleway;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 24px;
-  margin-bottom: 16px;
-}
-.legalisation__section h3 {
-  font-family: Raleway;
-  font-size: 19px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section h3 span {
-  color: #e21b88;
-  font-size: 16px;
-}
-.legalisation__section h3 .link {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
-  font-style: italic;
-  line-height: 19px;
-  text-decoration: none;
-  color: #2626df;
-}
-.legalisation__section h3 .link i {
-  font-size: 14px;
-  margin-right: 4px;
-}
-.legalisation__section h3 .link:visited {
-  color: blueviolet;
-}
-.legalisation__section h4 {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: italic;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section h4 span {
-  color: #e21b88;
-}
-.legalisation__section h5 {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section h6 {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
-  font-style: italic;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection .text {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection ul {
-  list-style: inside;
-}
-.legalisation__section .demo .subsection ul li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection h4 span {
-  color: #e21b88;
-  font-size: 14px;
-  font-weight: 600;
-}
-.legalisation__section .demo .subsection .legalisation__text {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ul {
-  list-style: inside;
-}
-.legalisation__section .demo .subsection ul li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ul li span {
-  margin-top: 8px;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-}
-.legalisation__section .demo .subsection .legalisation__title {
-  margin-top: 8px;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-}
-.legalisation__section .demo .subsection h5 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
-}
-.legalisation__section .demo .subsection .legalisation__text {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection .legalisation__text span {
-  color: #e21b88;
-  font-weight: 600;
-}
-.legalisation__section .demo .subsection ul {
-  list-style: inside;
-}
-.legalisation__section .demo .subsection ul li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ul li span {
-  font-weight: 600;
-  color: #4b4a4a;
-}
-.legalisation__section .demo .subsection h6 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #e21b88;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection h4 span {
-  color: #e21b88;
-  font-size: 16px;
-  font-weight: 600;
-}
-.legalisation__section .demo .subsection h6 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection .legalisation__text {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection .list {
-  list-style: decimal;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-  padding-left: 0;
-}
-.legalisation__section .demo .subsection .list span {
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol li {
-  list-style: decimal inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol li span {
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol ul {
-  padding-left: 16px;
-  list-style: square;
-}
-.legalisation__section .demo .subsection ol ul li {
-  list-style: inside;
-}
-.legalisation__section .demo .subsection .legalisation__title {
-  margin-top: 8px;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-}
-.legalisation__section .demo .subsection h5 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection .legalisation__text {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection .legalisation__text span {
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol li {
-  list-style: decimal inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol li span {
-  color: #e21b88;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol ul {
-  padding-left: 16px;
-  list-style: square;
-}
-.legalisation__section .demo .subsection ol ul li {
-  list-style: inside;
-}
-.legalisation__section .demo .subsection h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo .subsection h4 span {
-  color: #e21b88;
-  font-weight: 600;
-  font-size: 14px;
-}
-.legalisation__section .demo .subsection ol li {
-  list-style: decimal inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .subsection ol li span {
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-
-.money__section {
-  padding: 100px 16px 16px;
-}
-.money__section h2 {
-  color: #4b4a4a;
-  font-family: Golos;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 27px;
-  margin-bottom: 16px;
-}
-.money__section h3 {
-  font-family: Golos;
-  font-size: 19px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #e21b88;
-  margin-bottom: 16px;
-}
-.money__section h3 span {
-  color: #a326f7;
-  margin-bottom: 8px;
-  font-weight: 500;
-}
-.money__section h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.money__section h4 span {
-  font-weight: 600;
-  color: #e21b88;
-}
-.money__section p {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  margin-bottom: 16px;
-  color: #4b4a4a;
-}
-.money__section p span {
-  color: #e21b88;
-}
-.money__section ul {
-  list-style: inside;
-}
-.money__section ul li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.money__section ul ol li {
-  list-style: decimal inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.money__section ul ol li span {
-  color: #e21b88;
-  margin-bottom: 8px;
-}
-.money__section .links {
-  margin-bottom: 16px;
-}
-.money__section ol li {
-  list-style: decimal inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.money__section ol li span {
-  color: #e21b88;
-  margin-bottom: 8px;
-}
-.money__section ol ul {
-  padding-left: 16px;
-  list-style: square;
-}
-.money__section ol ul li {
-  list-style: inside;
-  color: #4b4a4a;
-}
-
-.fop__section {
-  padding: 100px 16px 16px;
-}
-.fop__section h2 {
-  color: #4b4a4a;
-  font-family: Golos;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 27px;
-  margin-bottom: 16px;
-}
-.fop__section h2 span {
-  color: #a326f7;
-  font-size: 19px;
-  font-weight: 500;
-}
-.fop__section h3 {
-  font-family: Golos;
-  font-size: 19px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #e21b88;
-  margin-bottom: 8px;
-}
-.fop__section h3 span {
-  color: #a326f7;
-  font-size: 16px;
-  font-weight: 500;
-}
-.fop__section h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
-}
-.fop__section ol {
-  list-style: inside decimal;
-  margin: 16px 0;
-}
-.fop__section ol li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  margin-bottom: 16px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.fop__section p {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  margin-bottom: 16px;
-  color: #4b4a4a;
-}
-
-.about__section {
-  padding: 100px 16px 16px;
-}
-.about__section h2 {
-  color: #4b4a4a;
-  font-family: Golos;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 27px;
-  margin-bottom: 36px;
-  text-align: left;
-}
-.about__section .item {
-  margin-bottom: 16px;
-}
-.about__section .item .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-.about__section .item .title i {
-  font-size: 24px;
-  color: #4b4a4a;
-  margin-right: 16px;
-}
-.about__section .item .title h3 {
-  font-family: Golos;
-  font-size: 19px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #e21b88;
-  margin-bottom: 16px;
-}
-.about__section .item h4 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 16px;
-}
-.about__section .item p {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  margin-bottom: 16px;
-  color: #4b4a4a;
-}
-.about__section .item p span {
-  color: #e21b88;
-}
-.about__section ol {
-  list-style: inside decimal;
-  margin-top: 16px;
-}
-.about__section ol li {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-  max-width: 600px;
-}
-.about__section ul li {
-  list-style: inside;
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.about__section ul li span {
-  color: #e21b88;
-  margin-bottom: 8px;
-}
-.about__section ul li p {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  padding: 0 20px;
-}
-
-.viza__section {
-  padding: 100px 16px 16px;
-}
-.viza__section h2 {
-  color: #4b4a4a;
-  font-family: Golos;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 27px;
-  margin-bottom: 16px;
-}
-@media (max-width: 599px) {
-  .viza__section h2 {
-    font-size: 24px;
-    line-height: 29px;
-  }
-}
-.viza__section h3 {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 19px;
-  color: #e21b88;
-  margin: 16px 0;
-}
-.viza__section .links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-.viza__section .links .entry__link {
-  margin-bottom: 16px;
-}
-.viza__section .links .entry__link i {
-  margin-right: 8px;
-  font-size: 18px;
-  color: #5ea4dd;
-}
-.viza__section p {
-  font-family: Golos;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-
-.vaccinations__section {
-  padding: 100px 16px 16px;
-}
-.vaccinations__section h2 {
-  color: #4b4a4a;
-  font-family: Raleway;
-  font-size: 21px;
-  font-weight: 600;
-  line-height: 27px;
-  margin-bottom: 16px;
-}
-.vaccinations__section h3 {
-  font-family: Raleway;
-  font-size: 19px;
-  font-weight: 600;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
-}
-.vaccinations__section h4 {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 600;
-  font-style: italic;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
-}
-.vaccinations__section p {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin-bottom: 8px;
-}
-.vaccinations__section ol {
-  list-style: inside decimal;
-}
-.vaccinations__section ol li {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  font-style: italic;
-  margin-bottom: 8px;
-}
-.vaccinations__section ol li span {
-  color: #e21b88;
-}
-.vaccinations__section h5 {
-  font-family: Raleway;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
-}
-.vaccinations__section h6 {
-  font-family: Raleway;
-  font-size: 14px;
-  font-weight: 400;
-  font-style: italic;
-  line-height: 19px;
-  color: #4b4a4a;
-  margin: 16px 0;
 }
 
 @font-face {
