--- a/css/_header.scss
+++ b/css/_header.scss
@@ -179,7 +179,7 @@ header {
                     text-decoration: none;
                     transition-duration: .25s;
                     &:hover {
-                        background-color: #cc0001;
+                        background-color: #cc9f9f8a;
                         color: #cc0001;
                     }
                     &::selection {
