--- a/css/_index.scss
+++ b/css/_index.scss
@@ -251,6 +251,38 @@
         }
       }
     }
+  }
+  .text {
+    font-family: Raleway;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    color: #4b4a4a;
+    margin: 24px 0 16px;
+  }
+  .links {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 16px;
 
+    .link {
+      font-family: Raleway;
+      font-size: 16px;
+      font-weight: 400;
+      font-style: italic;
+      line-height: 19px;
+      text-decoration: none;
+      color: rgb(38, 38, 223);
+
+      i {
+        font-size: 14px;
+        margin-right: 4px;
+      }
+
+      &:visited {
+        color: blueviolet;
+      }
+    }
   }
 }
