--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -471,10 +471,10 @@
     }
 }
 .footer__section {
-    position: fixed;
-    bottom: 0;
+    position: absolute;
     left: 0;
-    right: 0;
+    bottom: 0;
+    width: 100%;
     min-height: 68px;
     display: flex;
     flex-direction: column;
