--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,7 +11,6 @@
 }
 
 header {
-
     .nav__container {
         position: fixed;
         z-index: 1000;
@@ -60,11 +59,12 @@ header {
                 a {
                     display: inline-block;
                     text-decoration: none;
-                    font-weight: normal;
-                    font-size: 16px;
-                    line-height: 20px;
-                    color:#000;
                     padding: 24px 16px;
+                    font-family: Raleway;
+                    font-size: 16px;
+                    font-weight: 600;
+                    line-height: 19px;
+                    color: #4b4a4a;
 
                     &:hover {
                         color: #cc0001;
@@ -173,9 +173,11 @@ header {
                 .navigation-mobile__item {
                     display: block;
                     padding: 16px 24px;
-                    color: rgb(44, 43, 43);
-                    font-size: 18px;
-                    font-weight: 600;
+                    font-family: Raleway;
+                    font-size: 19px;
+                    font-weight: 700;
+                    line-height: 19px;
+                    color: #4b4a4a;
                     text-decoration: none;
                     transition-duration: .25s;
                     &:hover {
