--- a/css/_index.scss
+++ b/css/_index.scss
@@ -286,3 +286,127 @@
     }
   }
 }
+
+.footer__section {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 68px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @include for-tablet-portrait {
+    min-height: 58px;
+    background-color: #cc0001;
+    box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+  }
+
+  @include for-phone-only {
+    min-height: 38px;
+    background-color: #cc0001;
+    box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+  }
+
+  .footer__about {
+    font-family: Raleway;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 21px;
+    color: #4b4a4a;
+    text-align: center;
+    margin: 0;
+
+    .link {
+      color: #cc0001;
+      text-decoration: none;
+
+      i {
+        &:hover {
+          transition: all 1s linear;
+          transform: scale(1.4);
+        }
+      }
+
+      &:hover {
+        font-weight: 700;
+      }
+
+      &:visited {
+        color: #cc0001;
+
+        @include for-tablet-portrait {
+          color: white;
+        }
+      }
+
+      @include for-tablet-portrait {
+        color: white;
+      }
+    }
+
+    @include for-tablet-portrait {
+      color: white;
+    }
+
+    @include for-phone-only {
+      display: none;
+    }
+  }
+
+  .footer__text {
+    font-family: Raleway;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 21px;
+    color: #4b4a4a;
+    text-align: center;
+    margin: 0;
+
+    @include for-tablet-portrait {
+      color: white;
+    }
+
+    @include for-phone-only {
+      color: white;
+    }
+  }
+
+  .link {
+    color: #cc0001;
+    text-decoration: none;
+
+    i {
+      &:hover {
+        transition: all 1s linear;
+        transform: scale(1.2);
+      }
+    }
+
+    &:hover {
+      font-weight: 700;
+    }
+
+    &:visited {
+      color: #cc0001;
+
+      @include for-tablet-portrait {
+        color: white;
+      }
+
+      @include for-phone-only {
+        color: white;
+      }
+    }
+
+    @include for-tablet-portrait {
+      color: white;
+    }
+
+    @include for-phone-only {
+      color: white;
+    }
+  }
+}
