--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ to { opacity: 1 }
     content: "\002B";
     display: block;
     float: left;
-    font-size: 20px; 
-    font-weight: bold;
+    font-size: 30px; 
+    font-weight: 500;
     height: 16px;
     line-height: 16px;
     margin: 0px 8px 3px 0;
