--- a/css/style.css
+++ b/css/style.css
@@ -1016,6 +1016,143 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: blueviolet;
 }
 
+.footer__section {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  min-height: 68px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section {
+    min-height: 58px;
+    background-color: #cc0001;
+    -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+            box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+  }
+}
+@media (max-width: 599px) {
+  .footer__section {
+    min-height: 38px;
+    background-color: #cc0001;
+    -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+            box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+  }
+}
+.footer__section .footer__about {
+  font-family: Raleway;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #4b4a4a;
+  text-align: center;
+  margin: 0;
+}
+.footer__section .footer__about .link {
+  color: #cc0001;
+  text-decoration: none;
+}
+.footer__section .footer__about .link i:hover {
+  -webkit-transition: all 1s linear;
+  transition: all 1s linear;
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+}
+.footer__section .footer__about .link:hover {
+  font-weight: 700;
+}
+.footer__section .footer__about .link:visited {
+  color: #cc0001;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .footer__about .link:visited {
+    color: white;
+  }
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .footer__about .link {
+    color: white;
+  }
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .footer__about {
+    color: white;
+  }
+}
+@media (max-width: 599px) {
+  .footer__section .footer__about {
+    display: none;
+  }
+}
+.footer__section .footer__text {
+  font-family: Raleway;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #4b4a4a;
+  text-align: center;
+  margin: 0;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .footer__text {
+    color: white;
+  }
+}
+@media (max-width: 599px) {
+  .footer__section .footer__text {
+    color: white;
+  }
+}
+.footer__section .link {
+  color: #cc0001;
+  text-decoration: none;
+}
+.footer__section .link i:hover {
+  -webkit-transition: all 1s linear;
+  transition: all 1s linear;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.footer__section .link:hover {
+  font-weight: 700;
+}
+.footer__section .link:visited {
+  color: #cc0001;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .link:visited {
+    color: white;
+  }
+}
+@media (max-width: 599px) {
+  .footer__section .link:visited {
+    color: white;
+  }
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .footer__section .link {
+    color: white;
+  }
+}
+@media (max-width: 599px) {
+  .footer__section .link {
+    color: white;
+  }
+}
+
 .entry__section {
   padding: 100px 16px 16px;
 }
@@ -1051,7 +1188,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section h3 .link {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1089,8 +1226,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section h5 .link {
   font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1106,7 +1243,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section h6 {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   color: #4b4a4a;
@@ -1133,7 +1270,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .rent__box .links .link {
   font-family: Raleway;
   font-size: 19px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 24px;
   text-decoration: none;
@@ -1174,8 +1311,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section .links .link {
   font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1201,8 +1338,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section .text .link {
   font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1232,8 +1369,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section ol li .link {
   font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1267,8 +1404,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 .entry__section ul li .link {
   font-family: Raleway;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1279,7 +1416,6 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-right: 4px;
 }
 .entry__section ul li .link:visited {
-  font-size: 12px;
   color: blueviolet;
 }
 .entry__section ul ol {
@@ -1384,7 +1520,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .demo .subsection h6 {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   color: #4b4a4a;
@@ -1406,7 +1542,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .demo .subsection .links .link {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1433,7 +1569,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .demo .subsection .text .link {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1464,7 +1600,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .demo .subsection ol li .link {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1496,7 +1632,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .entry__section .demo .subsection ul li .link {
   font-family: Raleway;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   font-style: italic;
   line-height: 19px;
   text-decoration: none;
@@ -1526,149 +1662,45 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-right: 8px;
 }
 
-.footer__section {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  min-height: 68px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section {
-    min-height: 58px;
-    background-color: #cc0001;
-    -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-            box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-  }
-}
-@media (max-width: 599px) {
-  .footer__section {
-    min-height: 38px;
-    background-color: #cc0001;
-    -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-            box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-  }
-}
-.footer__section .about {
-  font-family: Raleway;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 21px;
-  color: #4b4a4a;
-  text-align: center;
-  margin: 0;
-}
-.footer__section .about .link {
-  color: #cc0001;
-  text-decoration: none;
-}
-.footer__section .about .link i:hover {
-  -webkit-transition: all 1s linear;
-  transition: all 1s linear;
-  -webkit-transform: scale(1.4);
-          transform: scale(1.4);
-}
-.footer__section .about .link:hover {
-  font-weight: 700;
-}
-.footer__section .about .link:visited {
-  color: #cc0001;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .about .link:visited {
-    color: white;
-  }
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .about .link {
-    color: white;
-  }
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .about {
-    color: white;
-  }
-}
-@media (max-width: 599px) {
-  .footer__section .about {
-    display: none;
-  }
-}
-.footer__section .text {
-  font-family: Raleway;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 21px;
-  color: #4b4a4a;
-  text-align: center;
-  margin: 0;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .text {
-    color: white;
-  }
-}
-@media (max-width: 599px) {
-  .footer__section .text {
-    color: white;
-  }
-}
-.footer__section .link {
-  color: #cc0001;
-  text-decoration: none;
-}
-.footer__section .link i:hover {
-  -webkit-transition: all 1s linear;
-  transition: all 1s linear;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-.footer__section .link:hover {
-  font-weight: 700;
-}
-.footer__section .link:visited {
-  color: #cc0001;
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .link:visited {
-    color: white;
-  }
-}
-@media (max-width: 599px) {
-  .footer__section .link:visited {
-    color: white;
-  }
-}
-@media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .link {
-    color: white;
-  }
-}
-@media (max-width: 599px) {
-  .footer__section .link {
-    color: white;
-  }
-}
-
 @font-face {
-  font-family: Golos;
-  src: url(../Golos-Text.web/PT/PT/Golos-Text/Golos-Text_VF.WOFF);
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-Bold.woff") format("woff");
+  src: url("/Raleway/Raleway-Bold.woff2") format("woff2");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-SemiBold.woff") format("woff");
+  src: url("/Raleway/Raleway-SemiBold.woff2") format("woff2");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-Medium.woff") format("woff");
+  src: url("/Raleway/Raleway-Medium.woff2") format("woff2");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-MediumItalic.ttf") format("woff2");
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-Regular.woff") format("woff");
+  src: url("/Raleway/Raleway-Regular.woff2") format("woff2");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Raleway";
+  src: url("/Raleway/Raleway-Italic.ttf") format("ttf");
+  src: url("/Raleway/Raleway-Italic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
 }
 .container {
-  font-family: Golos;
+  font-family: "Raleway";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   max-width: 1200px;
