--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -46,13 +46,13 @@
             font-style: italic;
             line-height: 19px;
             text-decoration: none;
-            color: rgb(38, 38, 223);
+            color: rgb(27, 98, 230);
             i {
                 font-size: 14px;
                 margin-right: 4px;
             }
             &:visited {
-                color: blueviolet;
+                color: rgb(135, 66, 214);
             }
         }
     }
@@ -80,18 +80,18 @@
         }
         .link {
             font-family: Raleway;
-            font-size: 15px;
+            font-size: 16px;
             font-weight: 500;
             font-style: italic;
             line-height: 19px;
             text-decoration: none;
-            color: rgb(38, 38, 223);
+            color: rgb(27, 98, 230);
             i {
                 font-size: 14px;
                 margin-right: 4px;
             }
             &:visited {
-                color: blueviolet;
+                color: rgb(135, 66, 214);
             }
         }
     }
@@ -120,7 +120,7 @@
                 font-style: italic;
                 line-height: 24px;
                 text-decoration: none;
-                color: rgb(38, 38, 223);
+                color: rgb(27, 98, 230);
                 @include for-tablet-portrait {
                     font-size: 16px;
                 }
@@ -128,16 +128,16 @@
                     font-size: 16px;
                 }
                 i {
-                    font-size: 14px;
+                    font-size: 16px;
                     margin-right: 4px;
                 }
                 &:visited {
-                    color: blueviolet;
+                    color: rgb(135, 66, 214);
                 }
             }
         }
         .text {
-            margin-bottom: 0;
+            margin: 0;
         }
     }
     .links {
@@ -147,18 +147,18 @@
         margin-bottom: 16px;
         .link {
             font-family: Raleway;
-            font-size: 15px;
+            font-size: 16px;
             font-weight: 500;
             font-style: italic;
             line-height: 19px;
             text-decoration: none;
-            color: rgb(38, 38, 223);
+            color: rgb(27, 98, 230);
             i {
                 font-size: 14px;
                 margin-right: 4px;
             }
             &:visited {
-                color: blueviolet;
+                color: rgb(135, 66, 214);
             }
         }
     }
@@ -174,18 +174,18 @@
         }
         .link {
             font-family: Raleway;
-            font-size: 15px;
+            font-size: 16px;
             font-weight: 500;
             font-style: italic;
             line-height: 19px;
             text-decoration: none;
-            color: rgb(38, 38, 223);
+            color: rgb(27, 98, 230);
             i {
                 font-size: 14px;
                 margin-right: 4px;
             }
             &:visited {
-                color: blueviolet;
+                color: rgb(135, 66, 214);
             }
         }
     }
@@ -204,19 +204,19 @@
             }
             .link {
                 font-family: Raleway;
-                font-size: 15px;
+                font-size: 16px;
                 font-weight: 500;
                 font-style: italic;
                 line-height: 19px;
                 text-decoration: none;
-                color: rgb(38, 38, 223);
+                color: rgb(27, 98, 230);
                 i {
                     font-size: 14px;
                     margin-right: 4px;
                 }
                 &:visited {
                     font-size: 12px;
-                    color: blueviolet;
+                    color: rgb(135, 66, 214);
                 }
             }
         }
@@ -239,18 +239,18 @@
             }
             .link {
                 font-family: Raleway;
-                font-size: 15px;
+                font-size: 16px;
                 font-weight: 500;
                 font-style: italic;
                 line-height: 19px;
                 text-decoration: none;
-                color: rgb(38, 38, 223);
+                color: rgb(27, 98, 230);
                 i {
                     font-size: 14px;
                     margin-right: 4px;
                 }
                 &:visited {
-                    color: blueviolet;
+                    color: rgb(135, 66, 214);
                 }
             }
         }
@@ -355,13 +355,13 @@
                     font-style: italic;
                     line-height: 19px;
                     text-decoration: none;
-                    color: rgb(38, 38, 223);
+                    color: rgb(27, 98, 230);
                     i {
                         font-size: 14px;
                         margin-right: 4px;
                     }
                     &:visited {
-                        color: blueviolet;
+                        color: rgb(135, 66, 214);
                     }
                 }
             }
@@ -382,13 +382,13 @@
                     font-style: italic;
                     line-height: 19px;
                     text-decoration: none;
-                    color: rgb(38, 38, 223);
+                    color: rgb(27, 98, 230);
                     i {
                         font-size: 14px;
                         margin-right: 4px;
                     }
                     &:visited {
-                        color: blueviolet;
+                        color: rgb(135, 66, 214);
                     }
                 }
             }
@@ -412,14 +412,14 @@
                         font-style: italic;
                         line-height: 19px;
                         text-decoration: none;
-                        color: rgb(38, 38, 223);
+                        color: rgb(27, 98, 230);
                         i {
                             font-size: 14px;
                             margin-right: 4px;
                         }
                         &:visited {
                             font-size: 12px;
-                            color: blueviolet;
+                            color: rgb(135, 66, 214);
                         }
                     }
                 }
@@ -444,14 +444,14 @@
                         font-style: italic;
                         line-height: 19px;
                         text-decoration: none;
-                        color: rgb(38, 38, 223);
+                        color: rgb(27, 98, 230);
                         i {
                             font-size: 14px;
                             margin-right: 4px;
                         }
                         &:visited {
                             font-size: 12px;
-                            color: blueviolet;
+                            color: rgb(135, 66, 214);
                         }
                     }
                 }
