--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -365,7 +365,7 @@
                     }
                 }
             }
-            .text {
+            .demo__text {
                 font-family: Raleway;
                 font-size: 16px;
                 font-weight: 400;
