--- a/css/_index.scss
+++ b/css/_index.scss
@@ -299,7 +299,7 @@
   align-items: center;
 
   @include for-tablet-portrait {
-    min-height: 58px;
+    min-height: 52px;
     background-color: #cc0001;
     box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
   }
@@ -349,6 +349,7 @@
 
     @include for-tablet-portrait {
       color: white;
+      font-size: 12px;
     }
 
     @include for-phone-only {
