--- a/css/style.css
+++ b/css/style.css
@@ -1038,7 +1038,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 @media (min-width: 599px) and (max-width: 870px) {
   .footer__section {
-    min-height: 58px;
+    min-height: 52px;
     background-color: #cc0001;
     -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
             box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
@@ -1090,6 +1090,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 @media (min-width: 599px) and (max-width: 870px) {
   .footer__section .footer__about {
     color: white;
+    font-size: 12px;
   }
 }
 @media (max-width: 599px) {
